# dls-2024-1

./: .gitattributes  .gitignore  LICENSE  cspell.yml  pixi.pyproject.toml  pyproject.toml
data/hw_4_2/: game_of_thrones_test.csv  game_of_thrones_train.csv
notebooks/hws/: 4_2_game_of_thrones_prediction.ipynb
src/dls_2024_1/: feature_importance.py  typing.py
