[project]
name = "dls-2024-1"
version = "0.1.0"
requires-python = ">= 3.10"
description = "Add a short description here"
authors = [{ name = "relicks", email = "axndr.litvinov@gmail.com" }]
readme = "README.md"
dependencies = [
    "jaxtyping>=0.2.34",
    "matplotlib==3.7.1",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "rich==13.8.1",
    "scikit-learn-intelex>=2024.7.0",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "seaborn==0.13.1",
    "statsmodels>=0.14.3",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
]

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5"]

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
# isort = { known-first-party = ["libs"] }
per-file-ignores = { "*.ipynb" = [
    "F401",
    "E402",
    "PLE1142",
    "PLR2004",
], "*.pyi" = [
    "F401",
] }
select = [
    # "D",   # pydocstyle
    # "ANN", # flake8-annotations
    "TCH", # flake8-type-checking
    "FBT", # flake8-boolean-trap

    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "I",    # isort
    "PL",   # pylint
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "PTH",  # flake8-use-pathlib
    "TRY",  # tryceratops
    "PERF", # Perflint 
    "FURB", # refurb 
    "PT",   # flake8-pytest-style
]
ignore = [
    "PLR0913", #too-many-arguments
    "RUF001",  # ambiguous cyrillic letters
    "RUF002",  # ambiguous cyrillic letters
    "RUF003",  # ambiguous-unicode-character-comment
    "ANN101",  # missing-type-self #? deprecated
    "D202",    # no-blank-line-after-function
    "N803",    # invalid-argument-name
    "N806",    # non-lowercase-variable-in-function
    "N812",    # lowercase-imported-as-non-lowercase
    "F722",
]

[tool.pyright]
pythonVersion = "3.10"
# venvPath = "./.pixi/envs"
reportPrivateImportUsage = false
reportMissingImports = true
reportMissingTypeStubs = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#? cSpell Configuration:
# cspell: words tryceratops FURB pydantic intelex
